# noisy-claw

./: .gitignore  README.md  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: audio-pipeline.md
docs/plans/: 2026-02-28-phase1-implementation.md  2026-02-28-phase1-mvp-design.md  2026-03-03-pipeline-refactor-design.md  2026-03-03-pipeline-refactor-implementation.md
native/noisy-claw-audio/: Cargo.toml
native/noisy-claw-audio/scripts/: visualize_dump.py
native/noisy-claw-audio/src/: aec.rs  audio_utils.rs  capture.rs  embedding.rs  lib.rs  main.rs  output.rs  playback.rs  protocol.rs  stt.rs  vad.rs
native/noisy-claw-audio/src/cloud/: mod.rs  traits.rs
native/noisy-claw-audio/src/cloud/aliyun/: dashscope_protocol.rs  dashscope_stt.rs  dashscope_tts.rs  mod.rs
native/noisy-claw-audio/src/pipeline/: aec.rs  capture.rs  dump.rs  mod.rs  output.rs  stt.rs  tap.rs  topic.rs  tts.rs  vad.rs
native/noisy-claw-audio/src/pipeline/graph/: builder.rs  definition.rs  mod.rs  node.rs  pipeline.rs  registry.rs  types.rs  wiring.rs
native/noisy-claw-audio/src/pipeline/graph/nodes/: aec_node.rs  capture_node.rs  ipc_sink_node.rs  mod.rs  output_node.rs  stt_cloud_node.rs  stt_local_node.rs  stt_node.rs  topic_node.rs  tts_node.rs  vad_node.rs
native/noisy-claw-audio/tests/: ipc_integration.rs
native/noisy-claw-audio/visualizer/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
native/noisy-claw-audio/visualizer/src/: App.tsx
native/noisy-claw-audio/visualizer/src/components/: DumpBrowser.tsx  GenericStreamView.tsx  LevelMeter.tsx  MetadataStreamView.tsx  NodeDashboard.tsx  NodeInspector.tsx  NodeMetricsGrid.tsx  PipelineGraph.tsx  PipelineJsonPanel.tsx  SpectrogramCanvas.tsx  SpectrumCanvas.tsx  TapSelector.tsx  TextStreamView.tsx  VadPanel.tsx  WaveformCanvas.tsx
native/noisy-claw-audio/visualizer/src/hooks/: useECharts.ts  useTapSocket.ts
native/noisy-claw-audio/visualizer/src/lib/: colors.ts  downsample.ts  fft.ts  protocol.ts  theme.ts
skills/: SKILL.md
src/: cli.ts
src/channel/: config.ts  dispatch.ts  gateway.ts  outbound.ts  plugin.ts  session.test.ts  session.ts
src/config/: config.test.ts  defaults.ts  schema.ts
src/ipc/: protocol.test.ts  protocol.ts  subprocess.ts
src/models/: catalog.ts  download.ts  manager.ts
src/pipeline/: coordinator.test.ts  coordinator.ts  interfaces.ts
src/pipeline/output/: rust-playback.ts
src/pipeline/segmentation/: dictation.test.ts  dictation.ts  meeting.test.ts  meeting.ts  vad-silence.test.ts  vad-silence.ts
src/pipeline/sources/: rust-capture.ts
src/pipeline/stt/: rust-whisper.ts
src/pipeline/tts/: openclaw-tts.ts
src/tools/: tools.test.ts  voice-listen.ts  voice-mode.ts  voice-speak.ts  voice-status.ts  voice-transcript.ts
