[package]
name = "noisy-claw-audio"
version = "0.1.0"
edition = "2021"
description = "Audio engine for noisy-claw: capture, VAD, STT, playback"

[[bin]]
name = "noisy-claw-audio"
path = "src/main.rs"

[[bin]]
name = "noisy-claw-standalone"
path = "src/bin/standalone.rs"

[dependencies]
# Audio capture & playback
cpal = "0.17"
rodio = { version = "0.22", default-features = false, features = ["mp3", "vorbis", "wav", "playback"] }

# STT
whisper-rs = "0.15"

# VAD (ONNX inference)
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"

# IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (needed now for clean concurrency, and later for cloud STT/TTS providers)
tokio = { version = "1", features = ["full"] }

# Cloud STT/TTS (WebSocket)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

# Echo cancellation
webrtc-audio-processing = { version = "2.0", features = ["bundled"] }
webrtc-audio-processing-config = "2.0"

# Ring buffer for streaming output
ringbuf = "0.4"

# Sentence embeddings (topic detection)
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Node auto-registration
inventory = "0.3"

# Utilities
anyhow = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
